[notifications] fix notifications z-index

--- a/src/components/core/notification/Notification.scss
+++ b/src/components/core/notification/Notification.scss
@@ -8,7 +8,7 @@
   overflow: hidden;
   transition: height 0.25s;
   position: absolute;
-  z-index: 9999;
+  z-index: 99;
 
   &.fixed {
     position: fixed;
